--- a/experiments/01_idiom_comprehension/css/experiment.css
+++ b/experiments/01_idiom_comprehension/css/experiment.css
@@ -1,3 +1,3 @@
-#jspsych-survey-multi-choice-css .jspsych-survey-multi-choice-text span.required{
-color: white;
+.jspsych-survey-multi-choice-text span.required {
+    color: white;
 }
